--- a/estilo.css
+++ b/estilo.css
@@ -42,8 +42,7 @@ nav li {
 
 #painel_filme {
     background: rgb(255, 255, 255);
-    margin-left: 10em;
-    margin-right: 10em;
+    margin-left: 10em 10em;
     border-radius: 20px;
     padding: 1em;
 }
@@ -60,9 +59,7 @@ section {
 }
 
 #poster_tenac {
-    position: relative;
     float: right;
-    top: -80px
 }
 
 h1 {
@@ -86,8 +83,6 @@ body p {
     background: black;
     color: lightgray;
     border-radius: 10px;
-    margin: 1em;
-    padding: 1em;
 }
 
 dt {
